[gd_scene load_steps=8 format=3 uid="uid://bbk2pwtiw1nyw"]

[ext_resource type="Script" path="res://mob/MOB.gd" id="1_io45y"]
[ext_resource type="Texture2D" uid="uid://17p3l3w86ftt" path="res://icon.svg" id="2_bp2y1"]
[ext_resource type="Texture2D" uid="uid://cegw6qfjwcfwd" path="res://mob/assetsmob/gato3.png" id="3_ep7pk"]
[ext_resource type="Texture2D" uid="uid://ciumghr1cs1pf" path="res://mob/assetsmob/gato2.png" id="4_8xg1m"]
[ext_resource type="Texture2D" uid="uid://dx6ti55fm0k8l" path="res://mob/assetsmob/gato1.png" id="5_lj7a3"]
[ext_resource type="Texture2D" uid="uid://r8xsui410b3n" path="res://mob/assetsmob/gato4.png" id="6_excvj"]
[ext_resource type="Texture2D" uid="uid://d4acgvshyswqj" path="res://mob/assetsmob/cerditovolador.png" id="7_ffomi"]

[node name="Mob" type="Area2D"]
position = Vector2(-850, 126)
script = ExtResource("1_io45y")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(779, -89.812)
scale = Vector2(-5.38536, 6.0188)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(779, -85.812)
texture = ExtResource("2_bp2y1")

[node name="CollisionA" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(779, -85.812)
polygon = PackedVector2Array(64, -61.1, 64, 59, 59.6, 64, -60.2, 64, -64, 61, -64, 58, -64, -59, -59, -63.8, 59.2, -64)
disabled = true

[node name="gato1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2324.01, -98.2381)
scale = Vector2(4.38323, 5.1618)
texture = ExtResource("3_ep7pk")

[node name="CollisionB" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-2324.01, -98.2381)
scale = Vector2(3.35885, 4.52381)
polygon = PackedVector2Array(8.6, -1.7, 12.8, -4.8, 15, -3.7, 15, -2, 16, 0, 16, 4.5, 14.9, 4.5, 10.7, 9.5, -12, 9.5, -16, 2, -16, -0.5, -15, -0.5, -15, -8.5, -12.8, -8.5, -12, -9.3, -6.8, -9.5, -5.6, -8.5, -4.3, -9.5, 1, -9.5)
disabled = true

[node name="gato2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1354.04, -75.3364)
scale = Vector2(4.45155, 5.10397)
texture = ExtResource("4_8xg1m")

[node name="CollisionC" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-1354.04, -75.3364)
scale = Vector2(4.45155, 5.10397)
polygon = PackedVector2Array(8.6, -3.2, 12.8, -6.3, 15, -5.2, 15, -3.5, 16, -1.5, 16, 3, 14.9, 3, 9.9, 9, 5.3, 9, -1.4, 10, -10, 10, -10, 9.1, -16, 5.1, -16, -0.3, -13, -9.4, -13, -10, -6.5, -10, -5.6, -10, 2, -10)
disabled = true

[node name="gato3" type="Sprite2D" parent="."]
position = Vector2(-225.336, -70.16)
scale = Vector2(4.44, 5.24)
texture = ExtResource("5_lj7a3")

[node name="CollisionD" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-233, -70)
scale = Vector2(4.44, 5.24)
polygon = PackedVector2Array(8.6, -3.2, 12.8, -6.3, 15, -5.2, 15, -3.5, 16, -1.5, 16, 3, 14.9, 3, 9.9, 9, 5.3, 9, -1.4, 10, -10, 10, -10, 9.1, -16, 5.1, -16, -0.3, -13, -9.4, -13, -10, -6.5, -10, -5.6, -10, 2, -10)
disabled = true

[node name="gato4" type="Sprite2D" parent="."]
position = Vector2(-843.076, -270.44)
scale = Vector2(4.25485, 6.34287)
texture = ExtResource("6_excvj")

[node name="CollisionE" type="CollisionPolygon2D" parent="."]
position = Vector2(-843.076, -270.44)
scale = Vector2(4.25485, 4.38287)
polygon = PackedVector2Array(8.8, -2.5, 9.4, -2.5, 12.9, -4.8, 15, -3.7, 15, -2, 16, 0, 16, 4.5, 15.1, 4.5, 12.1, 9.5, 9.5, 9.5, 7.5, 10.5, -12, 10.5, -12, 9.5, -16, 6.5, -16, -1.5, -15, -1.5, -15, -9.5, -12.8, -9.5, -12, -10.3, -6.8, -10.5, -5.6, -9.5, -4.3, -10.5, 1, -10.5)
disabled = true

[node name="cerdovolador" type="Sprite2D" parent="."]
position = Vector2(-1853.63, -305.788)
scale = Vector2(-1.29294, 1.1096)
texture = ExtResource("7_ffomi")

[node name="CollisionF" type="CollisionPolygon2D" parent="."]
position = Vector2(-1853.63, -305.788)
rotation = -3.14159
scale = Vector2(1.29294, -1.1096)
polygon = PackedVector2Array(16, -50.2, 16, -49.4, 27, -45.4, 27, -42.3, 31.5, -27, 35.1, -27, 40.1, -19, 43.8, -19, 49, -13.8, 49, -5.3, 44.2, 0.299999, 49, 4.3, 49, 16, 47.8, 16, 36.8, 27, 31.3, 27, 35, 30.1, 35, 33.8, 30.8, 38, 27.5, 38, 19, 42.2, 19, 38.9, 17.5, 37.6, 18.6, 42, 15.7, 42, 9.7, 47, 4.9, 47, -2.8, 35.5, -4.6, 41, -8.9, 41, -27, 42.1, -27, 40, -31, 37, -31, 34.5, -35, 27.5, -35, 23.4, -36.7, 14, -43.9, 14, -49, 7.9, -49, -1, -44, -1, -44, -3.8, -38.8, -9, -34.3, -9, -31.8, -7.1, -21.9, -18, -19.5, -18, -11.5, -22.8, -18, -30.2, -18, -34, -19.3, -43, -16.9, -43, -11, -49.7, -11, -51, -6.6, -51, -1, -48.2, -1, -45.2, 1.8, -47.3, 4, -46.2, 4, -45.1, 6.7, -43.3, 5.4, -48, 8.5, -48, 13.5, -51, 14.5, -51)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
